name:                crowd
version:             0.0.1.0
-- synopsis:
-- description:
homepage:            https://github.com/marceloboeira/crowd#readme
license:             MIT
license-file:        LICENSE
author:              Marcelo Boeira
maintainer:          me@marceloboeira.com
copyright:           2019 Marcelo Boeira
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable crowd
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , bytestring
                       , amqp >= 0.18.1
